--- a/test-main/test.html
+++ b/test-main/test.html
@@ -44,6 +44,22 @@
 					<span>Ответ...</span>
 				</label>
 			</li>
+			<li><span class="title">Право це</span>
+				<select name="answer1">
+				<option>А</option>
+				<option>Б</option>
+				<option>В</option>
+				<option>Г</option>
+				</select>
+			</li>
+			<li class="title"><span>ФОП це</span>
+				<select name="answer2">
+				<option>А</option>
+				<option>Б</option>
+				<option>В</option>
+				<option>Г</option>
+				</select>
+			</li>
 		</ul>
 
 		<button class="quiz-submit submit" id="submit">Відповісти</button>
