--- a/test-main/test.html
+++ b/test-main/test.html
@@ -44,7 +44,7 @@
 					<span>Ответ...</span>
 				</label>
 			</li>
-			<li><span class="title">Право це</span>
+			<li><h3 class="title">Право це</h3>
 				<select name="answer1">
 				<option>А</option>
 				<option>Б</option>
@@ -52,7 +52,7 @@
 				<option>Г</option>
 				</select>
 			</li>
-			<li class="title"><span>ФОП це</span>
+			<li><h3 class="title">Право це</h3>
 				<select name="answer2">
 				<option>А</option>
 				<option>Б</option>
